# carmy

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/carmy/: __init__.py  main.py
src/carmy/api/: __init__.py  app.py  deps.py
src/carmy/api/routes/: __init__.py  analytics.py  board.py  export.py  htmx.py  meals.py  months.py  pages.py  plans.py  weeks.py
src/carmy/api/schemas/: __init__.py  board.py  meal.py  month.py  plan.py  week.py
src/carmy/api/templates/: analytics.html  base.html  index.html  today.html
src/carmy/cli/: __init__.py  analytics.py  db_cmd.py  export.py  import_cmd.py  meals.py  month.py  plans.py  season.py  stats.py  web.py  week.py
src/carmy/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/carmy/frontend/src/: App.jsx  (+1 more)
src/carmy/i18n/: __init__.py
src/carmy/migrations/: 001_add_portions_keeps_days.py  002_add_plan_meal_chain_fields.py  003_add_v2_planning_columns.py  004_add_v2_planning_tables.py  005_migrate_to_v2_structure.py  __init__.py  runner.py
src/carmy/models/: __init__.py  cooking_event.py  cooking_rhythm.py  database.py  meal.py  meal_slot.py  month_plan.py  plan.py  recipe.py  week_skeleton.py
src/carmy/schemas/: __init__.py
src/carmy/services/: __init__.py  analytics.py  analyzer.py  export.py  generator.py  month_orchestrator.py  rules_engine.py  seasonality.py  theme_settings.py  week_materializer.py
src/carmy/utils/: __init__.py  importers.py
tasks/: backlog.md
tests/: TEST_PLAN_PHASE8.md  __init__.py  test_board.py
(+55 files in other folders)
